<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_invite_two_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/titlebackground">

        <LinearLayout
            android:id="@+id/iv_suggestion_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_10">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_left"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="邀请"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_marginTop="@dimen/dp_9"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_4">

        <ImageView
            android:id="@+id/iv_activity_unregisteruserinvite_userimg"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_activity_unregisterinvite_texttitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/unregisterphonenum"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_phonenum"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:id="@+id/tv_activity_unregisterinvite_phonenum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13333939333"
                    android:textColor="@color/redFont"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:paddingLeft="@dimen/dp_10"
        android:text="允许该手机访问正正的家权限"
        android:textColor="#8f8f8f"
        android:textSize="@dimen/sp_16"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_14"
            android:text="私密权限"
            android:textSize="@dimen/sp_16"/>

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_9"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:paddingLeft="@dimen/dp_10"
        android:text="@string/private_authority_desc"
        android:textSize="@dimen/sp_16"/>

    <LinearLayout
        android:id="@+id/ll_activity_unregisteruserinvite_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5">

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:src="@drawable/wechat_icon_3x"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="微信邀请"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_activity_unregisteruserinvite_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5">

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sms_icon_3x"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="短信邀请"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>
    <!--<Button-->
    <!--android:id="@+id/bt_activity_unregisteruserinvite"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="@dimen/dp_10"-->
    <!--android:text="邀请"/>-->
</LinearLayout>