<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:text="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_top_bg">

    <RelativeLayout
        android:id="@+id/rl_play_details_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">

        <ImageView
            android:id="@+id/player_back"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/arrow_left"/>

        <TextView
            android:id="@+id/player_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/player_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:text="收藏"
            android:textColor="#ff4511"
            android:textSize="16sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_play_details_bottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.tongyuan.android.zhiquleyuan.view.IconTextView
            android:id="@+id/player_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            text:titleIcon="@drawable/selector_player_bottom_phone"
            text:titleText="@string/player_phone"
            text:titleTextColor="@drawable/selector_main_bottom_color"
            text:titleTextSize="18sp"
            text:titlePadding="5dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="46dp"
            android:background="@color/main_top_edit_stroke" />

        <com.tongyuan.android.zhiquleyuan.view.IconTextView
            android:id="@+id/player_toy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            text:titleIcon="@drawable/selector_player_bottom_toy"
            text:titleText="@string/player_toy"
            text:titleTextColor="@drawable/selector_main_bottom_color"
            text:titleTextSize="18sp"
            text:titlePadding="5dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/player_progress"
        android:layout_above="@id/rl_play_details_bottom"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:max="100"
        android:progressDrawable="@drawable/progressbar_color"/>

    <TextView
        android:id="@+id/player_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_above="@id/player_progress"
        android:text="@string/player_start_time" />

    <TextView
        android:id="@+id/player_duration_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/player_progress"
        android:layout_marginRight="10dp"
        android:text="@string/player_start_time"/>



    <ImageView
        android:id="@+id/iv_playing_details_slide"
        android:layout_width="221dp"
        android:layout_height="221dp"
        android:padding="10dp"
        android:layout_below="@id/rl_play_details_title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/player_cover_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/player_cover_default"/>

    <ImageView
        android:id="@+id/player_lighting"
        android:layout_alignLeft="@id/iv_playing_details_slide"
        android:layout_alignTop="@id/iv_playing_details_slide"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:src="@drawable/player_lighting"/>

    <View
        android:id="@+id/view_play_details"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/rl_play_details_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <!--<TextView-->
        <!--android:id="@+id/tv_activity_playing_details_start"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:text="00:00"/>-->

    <!--<SeekBar-->
        <!--android:id="@+id/sb_playing_details"-->
        <!--android:layout_width="250dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"/>-->


    <!--<TextView-->
        <!--android:id="@+id/tv_activity_playing_details_duration"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:text="02:20"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/player_start_time"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/player_loop"
            android:layout_width="20dp"
            android:layout_height="14dp"
            android:layout_weight="1"
            android:src="@drawable/play_single"/>


        <ImageView
            android:id="@+id/player_pre"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/play_before_104"/>

        <ImageView
            android:id="@+id/player_play_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/play_240"/>


        <ImageView
            android:id="@+id/player_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/play_after_104"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:src="@drawable/play_catalog"/>

    </LinearLayout>
</RelativeLayout>